# GuZhi

./: CMakeLists.txt  MainForm.ui.qml  TransObj.cpp  TransObj.h  main.cpp  main.qml
